--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@ceramicnetwork/3id-did-resolver": "^1.3.1",
     "@ceramicnetwork/http-client": "^1.1.1",
     "@ceramicstudio/idx": "^0.12.1",
+    "@metamask/jazzicon": "^2.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.27.2",
     "dids": "^2.4.0",
     "ethers": "^5.4.4",
+    "mongoose": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
