--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.27.2",
     "dids": "^2.4.0",
+    "dotenv": "^16.0.1",
     "ethers": "^5.4.4",
     "mongoose": "^6.5.1",
     "react": "^17.0.2",
