--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
+    "web3": "^1.7.5",
     "web3modal": "^1.9.4"
   },
   "scripts": {
