--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@ceramicnetwork/http-client": "^1.1.1",
     "@ceramicstudio/idx": "^0.12.1",
     "@metamask/jazzicon": "^2.0.0",
+    "@supabase/supabase-js": "^1.35.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
