--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "@ceramicnetwork/3id-did-resolver": "^1.3.1",
     "@ceramicnetwork/http-client": "^1.1.1",
     "@ceramicstudio/idx": "^0.12.1",
+    "@chainlink/contracts": "^0.4.2",
     "@metamask/jazzicon": "^2.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.2",
     "@supabase/supabase-js": "^1.35.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "accounts": "^0.2.1",
     "axios": "^0.27.2",
     "dids": "^2.4.0",
     "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.4.4",
+    "hardhat": "^2.10.1",
     "mongoose": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
