--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "@ceramicstudio/idx": "^0.12.1",
     "@chainlink/contracts": "^0.4.2",
     "@metamask/jazzicon": "^2.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.2",
     "@supabase/supabase-js": "^1.35.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/mocha": "^9.1.0",
     "accounts": "^0.2.1",
     "axios": "^0.27.2",
     "dids": "^2.4.0",
@@ -23,11 +30,15 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.4.4",
     "hardhat": "^2.10.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "mongoose": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "solidity-coverage": "^0.7.21",
+    "ts-node": ">=8.0.0",
+    "typescript": ">=4.5.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.7.5",
     "web3modal": "^1.9.4"
