--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "System-Certificate",
+  "name": "did",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +25,6 @@
     "@types/mocha": "^9.1.0",
     "accounts": "^0.2.1",
     "axios": "^0.27.2",
-    "did": "^0.5.0",
     "dids": "^2.4.0",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
@@ -33,9 +32,7 @@
     "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
     "mongoose": "^6.5.1",
-    "node-version": "^2.0.0",
     "react": "^17.0.2",
-    "react-dev-utils": "^12.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
