--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "mongoose": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
+    "redux-form": "^8.3.8",
     "solidity-coverage": "^0.7.21",
     "ts-node": ">=8.0.0",
     "typescript": ">=4.5.0",
