--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@ceramicnetwork/http-client": "^1.1.1",
     "@ceramicstudio/idx": "^0.12.1",
     "@chainlink/contracts": "^0.4.2",
+    "@chakra-ui/react": "^2.2.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@metamask/jazzicon": "^2.0.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
@@ -29,6 +32,7 @@
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.4.4",
+    "framer-motion": "4.1.17",
     "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
     "mongoose": "^6.5.1",
